# reload-urls

./: .gitignore  .python-version  CHANGELOG.md  README.md  clean.sh  pyproject.toml  tox.ini
.github/workflows/: check.yml
src/karpyncho/reload_urls/: __init__.py
src/tests/: another_urls.py  settings.py  test_init.py  urls.py
