[build-system]
requires = ["wheel", "setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "karpyncho-reload-urls"
version = "0.1.1"
authors = [
    {name = "Sebastian Quiles", email = "qsebas@gmail.com"},
]
description = "A context manaager to reload urls routing in unittests changing a django setting."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/karpyncho/reload-urls"
# documentation = "https://readthedocs.org"
repository = "https://github.com/karpyncho/reload-urls"
changelog = "https://github.com/karpyncho/reload-urls/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "tox",
    "build",
    "flake8",
    "flake8-import-order",
    "pep8-naming",
    "flake8-colors",
    "pylint",
    "bandit",
    "pytest",
    "coverage",
    "pytest-cov",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}